fixed margin, padding and spacing in task section

--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,9 @@ body{
     border-radius: 5px;
 }
 .divisor{
-    color:white;
-    border:#e4e8eb;
+    background-color: #e4e8eb;
+    border-style: solid;
+    border-color: #e4e8eb;
 }
 .symbol{
     font-size: 70%;
@@ -61,17 +62,27 @@ body{
 .button-section{
     padding: 1rem 5%;
 }
-.task-section{
-    
-    color: rgb(112, 115, 117);
-    font-weight: bold;
+.task-container{
+    padding: 1rem 5%;
+}
+.task-header{
+    margin: 2% 0;
+    font-size: 20px;
+    color: rgb(100, 103, 104);
+    font-weight: 900;
     vertical-align: text-bottom;
+    
 }
 .task-list{
+    font-weight: 500;
+    padding: 2% 0%;
+    color: rgb(77, 73, 73) ;
     list-style: none;
-    line-height: 1.5rem;
+    /* line-height: 1.5rem; */
+
 }
 .task-done{
+    margin:5px;
     padding:3px;
     font-size: 80%;
     display: inline-block;
@@ -83,6 +94,7 @@ body{
     border-radius: 50%;
 }
 .task-fail{
+    margin:5px;
     font-size: 70%;
     display: inline-block;
     width: 20px;
@@ -93,5 +105,11 @@ body{
     border: 1.5px solid;
     border-radius: 50%;
 }
+
+    /* tags */
+.blue-tag{
+    
+}
+
 
 /* Footer */
